@@ -1,4 +1,6 @@
 {
     TChain chain("markovChain");
-    chain.Add("/scratch/hh/dust/naf/atlas/user/prudent/postProcessing_2012/outputs/XXOBS/XXINPUT.root");
+    chain.Add("/scratch/hh/dust/naf/atlas/user/sarrazin/postProcessing_2012/outputs/chi2/XXOBS/XXINPUT.root");
+
+    //    chain.Add("/scratch/hh/dust/naf/atlas/user/sarrazin/postProcessing_2012/outputs/chi2/4/3/fittino.out.point1.CMSSM.allObs.Summer2012_merged.root");
 }
