@@ -1,3 +1,12 @@
+2013-02-27 Bjoern <sarrazin@physik.uni-bonn.de>
+
+	* postProcessing/edgeDetection
+	- add missing scripts edgeChain, edgeScript, job_edge, makeJobForMe
+
+	* postProcessing/postProcessing.h
+	- use 1200 and 2500 instead of 1190 and 2490 for M0 and M12 if out of grid
+
+
 2013-02-26 Bjoern <sarrazin@physik.uni-bonn.de>
 	
 	* postProcessing/README/setup.sh
